--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icons8-t-67.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,7 +13,7 @@
      
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
      
-    <title>Food Ordering | React App</title>
+    <title>tomato.</title>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
